projects/gateway2/translator/testutils/outputs/backend-plugin-proxy.yaml
---
listeners:
- aggregateListener:
    httpFilterChains:
    - matcher: {}
      virtualHostRefs:
      - listener~80~example_com
    httpResources:
      virtualHosts:
        listener~80~example_com:
          domains:
          - example.com
          name: listener~80~example_com
          routes:
          - matchers:
            - prefix: /
            name: httproute-example-route-default-0-0
            options: {}
            routeAction:
              single:
                upstream:
                  name: test-backend-plugin-us
  bindAddress: '::'
  bindPort: 8080
  metadataStatic:
    sources:
    - resourceKind: gateway.networking.k8s.io/Gateway
      resourceRef:
        name: listener~80
        namespace: default
  name: listener~80
metadata:
  labels:
    created_by: gloo-kube-gateway-api
    gateway_namespace: default
  name: default-example-gateway
  namespace: gloo-system
