projects/gateway2/translator/testutils/outputs/http-routing-proxy.yaml
---
listeners:
- aggregateListener:
    httpFilterChains:
    - matcher: {}
      virtualHostRefs:
      - http~bar.example.com
      - http~example.com
      - http~foo.example.com
    httpResources:
      virtualHosts:
        http~bar.example.com:
          domains:
          - bar.example.com
          name: http~bar.example.com
          routes:
          - matchers:
            - headers:
              - name: env
                value: canary
              prefix: /
            options: {}
            routeAction:
              single:
                kube:
                  ref:
                    name: bar-svc-canary
                    namespace: default
          - matchers:
            - prefix: /
            options: {}
            routeAction:
              single:
                kube:
                  ref:
                    name: bar-svc
                    namespace: default
        http~example.com:
          domains:
          - example.com
          name: http~example.com
          routes:
          - matchers:
            - prefix: /
            options: {}
            routeAction:
              single:
                kube:
                  ref:
                    name: example-svc
                    namespace: default
        http~foo.example.com:
          domains:
          - foo.example.com
          name: http~foo.example.com
          routes:
          - matchers:
            - prefix: /login
            options: {}
            routeAction:
              single:
                kube:
                  ref:
                    name: foo-svc
                    namespace: default
  bindAddress: '::'
  bindPort: 8080
  name: http
metadata:
  labels:
    created_by: gloo-kube-gateway-api-translator
  name: example-gateway
  namespace: default
