projects/gateway2/translator/testutils/outputs/http-with-lambda-destination-proxy.yaml
listeners:
- aggregateListener:
    httpFilterChains:
    - matcher: {}
      virtualHostRefs:
      - listener~8080~example_com
    httpResources:
      virtualHosts:
        listener~8080~example_com:
          domains:
          - example.com
          name: listener~8080~example_com
          routes:
          - matchers:
            - prefix: /
            options: {}
            name: httproute-example-route-default-0-0
            routeAction:
              single:
                destinationSpec:
                  aws:
                    logicalName: uppercase
                upstream:
                  name: aws-upstream
                  namespace: default
  bindAddress: '::'
  bindPort: 8080
  metadataStatic:
    sources:
    - resourceKind: gateway.networking.k8s.io/Gateway
      resourceRef:
        name: listener~8080
        namespace: default
  name: listener~8080
metadata:
  labels:
    created_by: gloo-kube-gateway-api
    gateway_namespace: default
  name: default-gw
  namespace: gloo-system
