projects/gateway2/translator/testutils/outputs/https-routing-proxy.yaml
---
listeners:
- aggregateListener:
    httpFilterChains:
    - matcher:
        sslConfig:
          secretRef:
            name: https
            namespace: default
      virtualHostRefs:
      - https~example.com
    httpResources:
      virtualHosts:
        https~example.com:
          domains:
          - example.com
          name: https~example.com
          routes:
          - matchers:
            - prefix: /
            options: {}
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: default
  bindAddress: '::'
  bindPort: 8443
  name: https
metadata:
  labels:
    created_by: gloo-kube-gateway-api-translator
  name: example-gateway
  namespace: default
