projects/gateway2/translator/testutils/outputs/route-sort.yaml
---
listeners:
- aggregateListener:
    httpFilterChains:
    - matcher: {}
      virtualHostRefs:
      - http~example_com
    httpResources:
      virtualHosts:
        http~example_com:
          domains:
          - example.com
          name: http~example_com
          routes:
          - matchers:
            - exact: /a/1/2
            options: {}
            name: httproute-route-1-infra-5-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - exact: /x/1/2
            options: {}
            name: httproute-route-2-infra-5-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - exact: /a/1
            options: {}
            name: httproute-route-1-infra-4-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - exact: /x/1
            options: {}
            name: httproute-route-2-infra-4-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - regex: /a/.*
            options: {}
            name: httproute-route-1-infra-2-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - regex: /b/c/.*
            options: {}
            name: httproute-route-1-infra-3-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - regex: /x/.*
            options: {}
            name: httproute-route-2-infra-2-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - regex: /x/y/.*
            options: {}
            name: httproute-route-2-infra-3-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - prefix: /a/1
            options: {}
            name: httproute-route-1-infra-1-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - prefix: /x/1
            options: {}
            name: httproute-route-2-infra-1-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - prefix: /a
            options: {}
            name: httproute-route-1-infra-0-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
          - matchers:
            - prefix: /x
            options: {}
            name: httproute-route-2-infra-0-0
            routeAction:
              single:
                kube:
                  port: 80
                  ref:
                    name: example-svc
                    namespace: infra
  bindAddress: '::'
  bindPort: 8080
  metadataStatic:
    sources:
    - resourceKind: gateway.networking.k8s.io/Gateway
      resourceRef:
        name: http
        namespace: infra
  name: http
metadata:
  labels:
    created_by: gloo-kube-gateway-api
    gateway_namespace: infra
  name: infra-example-gateway
  namespace: gloo-system
